--- a/po/de/minetest.po
+++ b/po/de/minetest.po
@@ -6731,9 +6731,7 @@ msgstr ""
 msgid ""
 "The rendering back-end for Irrlicht.\n"
 "A restart is required after changing this.\n"
-"Note: On Android, stick with OGLES1 if unsure! App may fail to start "
-"otherwise.\n"
-"On other platforms, OpenGL is recommended, and it’s the only driver with\n"
+"OpenGL is recommended. It is the only driver with\n"
 "shader support currently."
 msgstr ""
 "Das Renderer-Backend für Irrlicht.\n"
