--- a/po/pt_BR/minetest.po
+++ b/po/pt_BR/minetest.po
@@ -6615,9 +6615,7 @@ msgstr ""
 msgid ""
 "The rendering back-end for Irrlicht.\n"
 "A restart is required after changing this.\n"
-"Note: On Android, stick with OGLES1 if unsure! App may fail to start "
-"otherwise.\n"
-"On other platforms, OpenGL is recommended, and it’s the only driver with\n"
+"OpenGL is recommended. It is the only driver with\n"
 "shader support currently."
 msgstr ""
 "Renderizador de fundo para o irrlight.\n"
