--- a/po/id/minetest.po
+++ b/po/id/minetest.po
@@ -1940,24 +1940,6 @@ msgstr "id"
 
 #: src/settings_translation_file.cpp
 msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Tetapkan posisi joystick virtual.\n"
-"Jika dimatikan, joystick virtual akan menengah di posisi sentuhan pertama."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Gunakan joystick virtual untuk mengetuk tombol \"aux\".\n"
-"Jika dinyalakan, joystick virtual juga akan mengetuk tombol \"aux\" saat "
-"berada di luar lingkaran utama."
-
-#: src/settings_translation_file.cpp
-msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
 "Can be used to move a desired point to (0, 0) to create a\n"
 "suitable spawn point, or to allow 'zooming in' on a desired\n"
@@ -2170,10 +2152,10 @@ msgstr "Tambahkan partikel saat menggali nodus."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Atur konfigurasi dpi ke layar Anda (selain X11/Android saja) misalnya untuk "
+"Atur konfigurasi dpi ke layar Anda (selain X11 saja) misalnya untuk "
 "layar 4K."
 
 #: src/settings_translation_file.cpp
@@ -6597,7 +6579,6 @@ msgid ""
 msgstr ""
 "Penggambar untuk Irrlicht.\n"
 "Mulai ulang dibutuhkan setelah mengganti ini.\n"
-"Catatan: Pada Android, gunakan OGLES1 jika tidak yakin! Apl mungkin gagal\n"
 "berjalan pada lainnya. Pada platform lain, OpenGL disarankan yang menjadi\n"
 "satu-satunya pengandar yang mendukung shader untuk saat ini."
 
