--- a/po/ro/minetest.po
+++ b/po/ro/minetest.po
@@ -1936,25 +1936,6 @@ msgstr "ro"
 
 #: src/settings_translation_file.cpp
 msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Fixează poziția joystick-ului virtual.\n"
-"Dacă este dezactivat, joystick-ul virtual se va orienta către poziția la "
-"prima atingere."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Utilizați joystick-ul virtual pentru a declanșa butonul \"aux\".\n"
-"Dacă este activat, joystick-ul virtual va atinge, de asemenea, butonul \"aux"
-"\" atunci când este în afara cercului principal."
-
-#: src/settings_translation_file.cpp
-msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
 "Can be used to move a desired point to (0, 0) to create a\n"
 "suitable spawn point, or to allow 'zooming in' on a desired\n"
@@ -2173,10 +2154,10 @@ msgstr "Adăuga particule atunci când săpați un nod."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Ajustați configurația dpi pe ecran (numai pentru x11/Android), de exemplu "
+"Ajustați configurația dpi pe ecran (numai pentru X11), de exemplu "
 "pentru ecrane 4k."
 
 #: src/settings_translation_file.cpp
