--- a/po/sv/minetest.po
+++ b/po/sv/minetest.po
@@ -1988,19 +1988,6 @@ msgid "LANG_CODE"
 msgstr "sv"
 
 #: src/settings_translation_file.cpp
-msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-
-#: src/settings_translation_file.cpp
 #, fuzzy
 msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
@@ -2204,10 +2191,10 @@ msgstr "Lägger till partiklar när en nod grävs."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Justera dpi-konfigurationen för din skärm (endast icke X11/Android) t.ex. "
+"Justera dpi-konfigurationen för din skärm (endast icke X11) t.ex. "
 "för 4k-skärmar."
 
 #: src/settings_translation_file.cpp
