--- a/po/be/minetest.po
+++ b/po/be/minetest.po
@@ -1941,25 +1941,6 @@ msgid "LANG_CODE"
 msgstr "be"
 
 #: src/settings_translation_file.cpp
-msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Фіксуе пазіцыю віртуальнага джойсціка.\n"
-"Калі выключана, віртуальны джойсцік будзе з’яўляцца на пазіцыі першага "
-"дотыку."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Выкарыстоўваць віртуальны джойсцік для актывацыі кнопкі \"aux\".\n"
-"Калі ўключана, віртуальны джойсцік таксама будзе націскаць кнопку \"aux\" "
-"калі будзе знаходзіцца па-за межамі асноўнага кола."
-
-#: src/settings_translation_file.cpp
 #, fuzzy
 msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
@@ -2172,11 +2153,11 @@ msgstr "Дадае часціцы пры капанні блока."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
 "Наладка DPI (кропак на цалю) на экране\n"
-"(не толькі X11/Android), напрыклад, для 4k-экранаў."
+"(не толькі X11), напрыклад, для 4k-экранаў."
 
 #: src/settings_translation_file.cpp
 #, c-format
@@ -2461,22 +2442,6 @@ msgid ""
 "Center of light curve boost range.\n"
 "Where 0.0 is minimum light level, 1.0 is maximum light level."
 msgstr ""
-
-#: src/settings_translation_file.cpp
-msgid ""
-"Changes the main menu UI:\n"
-"-   Full:  Multiple singleplayer worlds, game choice, texture pack chooser, "
-"etc.\n"
-"-   Simple: One singleplayer world, no game or texture pack choosers. May "
-"be\n"
-"necessary for smaller screens."
-msgstr ""
-"Змена інтэрфейсу галоўнага меню:\n"
-"-   full: выбар свету для адзіночнай альбо сеткавай гульні, асобны спіс "
-"чужых сервераў.\n"
-"-   simple: адзін свет для адзіночнай гульні ў меню, дзе спіс чужых "
-"сервераў; можа быць карысна для невелічкіх экранаў.\n"
-"Прадвызначана: simple для Android, full для ўсіх астатніх."
 
 #: src/settings_translation_file.cpp
 #, fuzzy
