--- a/po/cs/minetest.po
+++ b/po/cs/minetest.po
@@ -1940,24 +1940,6 @@ msgstr "cs"
 
 #: src/settings_translation_file.cpp
 msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Opravena pozice virtuálního joysticku.\n"
-"Pokud je zakázán, virtuální joystick se upraví podle umístění prvního dotyku."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Použít virtuální joystick pro stisknutí tlačítka 'aux'.\n"
-"Pokud je povoleno, virtuální joystick automaticky stiskne tlačítko 'aux' "
-"pokud je mimo hlavní kruh."
-
-#: src/settings_translation_file.cpp
-msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
 "Can be used to move a desired point to (0, 0) to create a\n"
 "suitable spawn point, or to allow 'zooming in' on a desired\n"
@@ -2169,10 +2151,10 @@ msgstr "Aktivuje částicové efekty při těžení bloku."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Upraví nastavení DPI pro vaši obrazovku (není pro X11/Android). Pro použití "
+"Upraví nastavení DPI pro vaši obrazovku (není pro X11). Pro použití "
 "například s 4k obrazovkami."
 
 #: src/settings_translation_file.cpp
