--- a/po/da/minetest.po
+++ b/po/da/minetest.po
@@ -1982,19 +1982,6 @@ msgid "LANG_CODE"
 msgstr "da"
 
 #: src/settings_translation_file.cpp
-msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-
-#: src/settings_translation_file.cpp
 #, fuzzy
 msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
@@ -2198,10 +2185,10 @@ msgstr "Tilføjer partikler, når man graver en blok."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Justér DPI-konfigurationen til din skærm (ikke-X11 / kun Android) f.eks. til "
+"Justér DPI-konfigurationen til din skærm (ikke-X11) f.eks. til "
 "4k-skærme."
 
 #: src/settings_translation_file.cpp
