--- a/po/de/minetest.po
+++ b/po/de/minetest.po
@@ -1943,26 +1943,6 @@ msgstr "de"
 
 #: src/settings_translation_file.cpp
 msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Fixiert die Position des virtuellen Joysticks.\n"
-"Falls deaktiviert, wird der virtuelle Joystick zur ersten berührten Position "
-"zentriert."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Den virtuellen Joystick benutzen, um die „Aux“-Taste zu "
-"betätigen.\n"
-"Falls aktiviert, wird der virtuelle Joystick außerdem die „Aux“-Taste "
-"drücken, wenn er sich außerhalb des Hauptkreises befindet."
-
-#: src/settings_translation_file.cpp
-msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
 "Can be used to move a desired point to (0, 0) to create a\n"
 "suitable spawn point, or to allow 'zooming in' on a desired\n"
@@ -2191,9 +2171,9 @@ msgstr "Zeigt Partikel, wenn man einen Block ausgräbt."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
-msgstr "DPI des Bildschirms (nicht für X11/Android) z.B. für 4K-Bildschirme."
+msgstr "DPI des Bildschirms (nicht für X11) z.B. für 4K-Bildschirme."
 
 #: src/settings_translation_file.cpp
 #, c-format
@@ -6736,8 +6716,6 @@ msgid ""
 msgstr ""
 "Das Renderer-Backend für Irrlicht.\n"
 "Ein Neustart ist erforderlich, wenn dies geändert wird.\n"
-"Anmerkung: Auf Android belassen Sie dies bei OGLES1, wenn Sie sich unsicher "
-"sind.\n"
 "Die App könnte sonst unfähig sein, zu starten.\n"
 "Auf anderen Plattformen wird OpelGL empfohlen, dies ist momentan der "
 "einzige\n"
