--- a/po/minetest.pot
+++ b/po/minetest.pot
@@ -3986,7 +3986,7 @@ msgstr ""
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
 
