--- a/po/nb/minetest.po
+++ b/po/nb/minetest.po
@@ -1935,25 +1935,6 @@ msgid "LANG_CODE"
 msgstr "nb"
 
 #: src/settings_translation_file.cpp
-msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Fastsetter posisjonen for virtuell styrepinne.\n"
-"Hvis avskrudd, vil den virtuelle styrepinnen sentreres til posisjon for "
-"første berøring."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Bruk virtuell styrepinne til å utløse \"aux\"-knapp.\n"
-"Hvis påskrudd, vil virtuell styrepinne ogstå trykke \"aux\"-knapp når den er "
-"utenfor hovedsirkelen."
-
-#: src/settings_translation_file.cpp
 #, fuzzy
 msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
@@ -2167,10 +2148,10 @@ msgstr "Legger på partikler når man graver ut en blokk."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Justér skjermens DPI-innstilling (ikke for X11/kun Android), f. eks. for 4k-"
+"Justér skjermens DPI-innstilling (ikke for X11), f. eks. for 4k-"
 "skjermer."
 
 #: src/settings_translation_file.cpp
