--- a/po/nl/minetest.po
+++ b/po/nl/minetest.po
@@ -1946,25 +1946,6 @@ msgstr "nl"
 
 #: src/settings_translation_file.cpp
 msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Corrigeert de positie van virtuele joystick. \n"
-"Indien uitgeschakeld, wordt de virtuele joystick gecentreerd op de positie "
-"van de eerste aanraking."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Gebruik virtuele joystick om de \"aux\" -knop te activeren. \n"
-"Indien ingeschakeld, zal de virtuele joystick ook op de \"aux\" -knop tikken "
-"wanneer deze buiten de hoofdcirkel is."
-
-#: src/settings_translation_file.cpp
-msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
 "Can be used to move a desired point to (0, 0) to create a\n"
 "suitable spawn point, or to allow 'zooming in' on a desired\n"
@@ -2185,11 +2166,10 @@ msgstr "Voeg opvliegende deeltjes toe bij het graven."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
 "Aangepaste DPI (dots per inch) instelling voor het scherm.\n"
-"Bijv. voor 4k schermen (niet voor X11 of Android)."
 
 #: src/settings_translation_file.cpp
 #, c-format
@@ -6884,7 +6864,6 @@ msgid ""
 msgstr ""
 "De rendering back-end voor Irrlicht. \n"
 "Na het wijzigen hiervan is een herstart vereist. \n"
-"Opmerking: op Android, blijf bij OGLES1 als je het niet zeker weet! Anders "
 "start de app mogelijk niet. \n"
 "Op andere platforms wordt OpenGL aanbevolen en het is de enige driver met \n"
 "shader-ondersteuning momenteel."
