--- a/po/pl/minetest.po
+++ b/po/pl/minetest.po
@@ -1942,25 +1942,6 @@ msgid "LANG_CODE"
 msgstr "pl"
 
 #: src/settings_translation_file.cpp
-msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Mocuje pozycję wirtualnego joysticka.\n"
-"Gdy jest wyłączona, wirtualny joystick przestawi się do miejsca pierwszego "
-"dotknięcia."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Użyj wirtualnego joysticka, aby zaaktywować przycisk \"aux\".\n"
-"Gdy włączone, wirtualny joystick również naciśnie przycisk \"aux\", gdy "
-"znajduje się poza głównym okręgiem."
-
-#: src/settings_translation_file.cpp
 #, fuzzy
 msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
@@ -2180,10 +2161,10 @@ msgstr "Dodaje efekty cząstkowe podczas wykopywania bloków."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Ustaw konfiguracje DPI dla twojego ekranu (nie X11/Tylko Android) np. dla "
+"Ustaw konfiguracje DPI dla twojego ekranu (nie X11) np. dla "
 "ekranów 4k."
 
 #: src/settings_translation_file.cpp
