--- a/po/pt/minetest.po
+++ b/po/pt/minetest.po
@@ -1954,25 +1954,6 @@ msgstr "pt"
 
 #: src/settings_translation_file.cpp
 msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Corrige a posição do joystick virtual.\n"
-"Se desabilitado, o joystick virtual vai centralizar na posição do primeiro "
-"toque."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Use joystick virtual para ativar botão \"aux\".\n"
-"Se habilitado, o joystick virtual vai também clicar no botão \"aux\" quando "
-"estiver fora do circulo principal."
-
-#: src/settings_translation_file.cpp
-msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
 "Can be used to move a desired point to (0, 0) to create a\n"
 "suitable spawn point, or to allow 'zooming in' on a desired\n"
@@ -2189,10 +2170,10 @@ msgstr "Adiciona partículas quando escava um node."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Ajustar configuração de dpi ao seu ecrã (não aplicável a X11/Android) ex: "
+"Ajustar configuração de dpi ao seu ecrã (não aplicável a X11) ex: "
 "para ecrãs 4K."
 
 #: src/settings_translation_file.cpp
@@ -6641,8 +6622,6 @@ msgid ""
 msgstr ""
 "Renderizador de fundo para o irrlight.\n"
 "Uma reinicialização é necessária após alterar isso.\n"
-"Note: no android, use o OGLES1 caso em dúvida! O aplicativo pode falhar ao "
-"abrir em outro caso.\n"
 "Em outras plataformas, OpenGL é recomendo, e é o único driver com suporte a "
 "sombreamento atualmente."
 
