--- a/po/ru/minetest.po
+++ b/po/ru/minetest.po
@@ -1947,25 +1947,6 @@ msgstr "ru"
 
 #: src/settings_translation_file.cpp
 msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-"(Android) Фиксирует положение виртуального джойстика.\n"
-"Если отключено, виртуальный джойстик будет появляться в месте первого "
-"касания."
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-"(Android) Использовать виртуальный джойстик для активации кнопки \"aux\".\n"
-"Если включено, виртуальный джойстик также будет нажимать кнопку \"aux\", "
-"когда будет находиться за пределами основного колеса."
-
-#: src/settings_translation_file.cpp
-msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
 "Can be used to move a desired point to (0, 0) to create a\n"
 "suitable spawn point, or to allow 'zooming in' on a desired\n"
@@ -2179,11 +2160,11 @@ msgstr "Добавляет частицы при раскопке ноды."
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Настройка dpi (плотности точек на дюйм) для вашего экрана (не для X11, "
-"только для Android). Например для мониторов с разрешением в 4k."
+"Настройка dpi (плотности точек на дюйм) для вашего экрана (не для X11"
+"). Например для мониторов с разрешением в 4k."
 
 #: src/settings_translation_file.cpp
 #, c-format
@@ -6611,7 +6592,6 @@ msgid ""
 msgstr ""
 "Программный интерфейс визуализации для Irrlicht.\n"
 "После изменения этого параметра потребуется перезапуск.\n"
-"Примечание: Если не уверены, используйте OGLES1 для Android, иначе\n"
 "приложение может не запуститься. На других платформах рекомендуется\n"
 "OpenGL, так как сейчас это единственный драйвер с поддержкой шейдеров."
 
