--- a/po/sw/minetest.po
+++ b/po/sw/minetest.po
@@ -2028,19 +2028,6 @@ msgid "LANG_CODE"
 msgstr "sw"
 
 #: src/settings_translation_file.cpp
-msgid ""
-"(Android) Fixes the position of virtual joystick.\n"
-"If disabled, virtual joystick will center to first-touch's position."
-msgstr ""
-
-#: src/settings_translation_file.cpp
-msgid ""
-"(Android) Use virtual joystick to trigger \"aux\" button.\n"
-"If enabled, virtual joystick will also tap \"aux\" button when out of main "
-"circle."
-msgstr ""
-
-#: src/settings_translation_file.cpp
 #, fuzzy
 msgid ""
 "(X,Y,Z) offset of fractal from world center in units of 'scale'.\n"
@@ -2244,10 +2231,10 @@ msgstr ""
 
 #: src/settings_translation_file.cpp
 msgid ""
-"Adjust dpi configuration to your screen (non X11/Android only) e.g. for 4k "
+"Adjust dpi configuration to your screen (non X11 only) e.g. for 4k "
 "screens."
 msgstr ""
-"Rekebisha usakinishaji wa dpi kwenye kiwamba chako (yasiyo X11/Android tu) "
+"Rekebisha usakinishaji wa dpi kwenye kiwamba chako (yasiyo X11 tu) "
 "mfano kwa 4 k skrini."
 
 #: src/settings_translation_file.cpp
